--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,7 @@
       integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Client</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
